--- a/demo/src/posts/2019/post-2.mdx
+++ b/demo/src/posts/2019/post-2.mdx
@@ -2,6 +2,7 @@
 title: Post 2
 tags: ['React', 'GatsbyJs', 'ES6', 'theme-ui']
 featuredImage: markus-spiske-70Rir5vB96U-unsplash.jpg
+date: 2020-02-17
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum lobortis.
