--- a/demo/src/posts/2020/01/post-3.mdx
+++ b/demo/src/posts/2020/01/post-3.mdx
@@ -2,6 +2,7 @@
 title: Post 3
 tags: ['React', 'HTML']
 featuredImage: florian-olivo-Ek9Znm8lQ1U-unsplash.jpg
+date: 2020-02-17
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
