--- a/demo/src/posts/2020/02/post-4.mdx
+++ b/demo/src/posts/2020/02/post-4.mdx
@@ -2,6 +2,7 @@
 title: Post 4
 tags: ['React', 'TypeScript']
 status: draft
+date: 2020-01-12
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
