--- a/demo/src/pages/theme-ui-components.mdx
+++ b/demo/src/pages/theme-ui-components.mdx
@@ -387,10 +387,19 @@ If you'd like to see the default theme `.js` that file can be found in [here](ht
 ## [Progress](#progress)
 
 ```javascript
-<Progress max={1} value={1/2}  sx={{color:'secondary'}}> 50% </Progress>
+<Progress max={1} value={1/2}> 50% </Progress>
+<Progress max={1} value={1/2} variant='styles.progress.secondary'> 50% </Progress>
+<Progress max={1} value={1/2} variant='styles.progress.success'> 50% </Progress>
+<Progress max={1} value={1/2} variant='styles.progress.error'> 50% </Progress>
 ```
 
-<Progress max={1} value={1/2} sx={{color:'secondary'}}> 50% </Progress>
+<Progress max={1} value={1/2} > 50% </Progress>
+<Divider />
+<Progress max={1} value={1/2} variant='styles.progress.secondary'> 50% </Progress>
+<Divider />
+<Progress max={1} value={1/2} variant='styles.progress.success'> 50% </Progress>
+<Divider />
+<Progress max={1} value={1/2} variant='styles.progress.error'> 50% </Progress>
 
 <Divider />
 
@@ -399,20 +408,32 @@ If you'd like to see the default theme `.js` that file can be found in [here](ht
 
 
 ```javascript
-<Donut value={1/2} sx={{color:'success'}} />
+<Donut value={1/2}/>
+<Donut value={1/2} variant='styles.donut.secondary'/>
+<Donut value={1/2} variant='styles.donut.success'/>
+<Donut value={1/2} variant='styles.donut.error'/>
 ```
 
-<Donut value={1/2} sx={{color:'success'}} />
+<Donut value={1/2} />
+<Donut value={1/2} variant='styles.donut.secondary'/>
+<Donut value={1/2} variant='styles.donut.success'/>
+<Donut value={1/2} variant='styles.donut.error'/>
 
 <Divider />
 
 ## [Spinner](#spinner)
 
 ```javascript
-<Spinner  sx={{color:'error'}} />
+<Spinner />
+<Spinner variant='styles.spinner.secondary'/>
+<Spinner variant='styles.spinner.success'/>
+<Spinner variant='styles.spinner.error'/>
 ```
 
-<Spinner  sx={{color:'error'}} />
+<Spinner />
+<Spinner variant='styles.spinner.secondary'/>
+<Spinner variant='styles.spinner.success'/>
+<Spinner variant='styles.spinner.error'/>
 
 <Divider />
 
