--- a/demo/src/posts/2018/11/post-0.mdx
+++ b/demo/src/posts/2018/11/post-0.mdx
@@ -5,4 +5,7 @@ featuredImage: pankaj-patel-SXihyA4oEJs-unsplash.jpg
 date: 2018-11-23
 ---
 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum
+lobortis.
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum lobortis.
