--- a/demo/src/pages/index.mdx
+++ b/demo/src/pages/index.mdx
@@ -142,7 +142,7 @@ Here we use it to return all the `projects` by using the filter prop
         return (
           <Box
             key={index}
-            sx={{ mb: 3, width: ["100%", "50%", "33.333%"] }}
+            sx={{ mb: 3, maxWidth: ["100%", "50%", "33.333%"], width: ["100%", "50%", "33.333%"] }}
           >
             <Link href={slug} sx={{textDecoration: 'none'}}>
               <Card
