--- a/demo/src/pages/components.mdx
+++ b/demo/src/pages/components.mdx
@@ -557,7 +557,7 @@ You can also use the `filter` prop with this component eg: `<SourceTags filter='
               </Box>
               <Text
                 sx={{ textAlign: 'center' }}
-              >{`Total time to read: ${timeToReadTotal} mins`}</Text>
+              >{`Total read time: ${timeToReadTotal} mins`}</Text>
             </Flex>
           </Box>
           <Box
