--- a/demo/src/posts/post-1.mdx
+++ b/demo/src/posts/post-1.mdx
@@ -17,6 +17,6 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris
   </Box>
 
   <Box sx={{ mb: 3, p:[0, 3], width: ["100%", "50%"] }}>
-    <EmbeddedImage src={props.embedded.image1} />
+    <Img fluid={props.embedded.image1.fluid} />
   </Box>
 </Flex>
