--- a/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
@@ -3,8 +3,9 @@ title: dummy
 tags: ['Dummy', 'Tags']
 date: 2020-01-17
 dateModified: 2020-02-17
-author: 'dummy'
-status: 'draft'
+author: dummy
+status: draft
+isPrivate: false
 featuredImage: 1x1.jpg
 embeddedImages:
   - 1x1.jpg
