change SourceDays day number - change li code block - change body line-height

--- a/demo/src/pages/markdown.mdx
+++ b/demo/src/pages/markdown.mdx
@@ -77,7 +77,7 @@ Strikethrough uses two tildes. ~~Scratch this.~~
 2. Another item
 1. Actual numbers don't matter, just that it's a number
 4. And another item.
-
+5. Code in list `boop`
 
 * Unordered list can use asterisks
 - Or minuses
@@ -88,6 +88,7 @@ Strikethrough uses two tildes. ~~Scratch this.~~
 2. Another item
 3. Actual numbers don't matter, just that it's a number
 4. And another item.
+5. Code in list `boop`
 
 - Unordered list can use asterisks
 
