--- a/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
@@ -6,6 +6,8 @@ dateModified: 2020-02-17
 author: dummy
 status: draft
 isPrivate: false
+url: https://example.com
+misc: Ahoy
 featuredImage: 1x1.jpg
 embeddedImages:
   - 1x1.jpg
