remove remote image post - remove urls from dummy fontmatter

--- a/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
@@ -9,13 +9,13 @@ isPrivate: false
 url: https://example.com
 misc: Ahoy
 featuredImage: 1x1.jpg
-featuredImageUrl: https://example.com/some-image.jpg
+featuredImageUrl: ''
 embeddedImages:
   - 1x1.jpg
   - 1x1.jpg
 embeddedImageUrls:
-  - https://example.com/some-images.jpg
-  - https://example.com/some-images.jpg
+  - ''
+  - ''
 ---
 
 This is a dummy hidden post containing required frontmatter. It's filtered out but matching the title useAllMdx => don/'t remove it
