--- a/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
@@ -8,6 +8,7 @@ status: draft
 isPrivate: false
 url: https://example.com
 misc: Ahoy
+pinned: false
 featuredImage: 1x1.jpg
 featuredImageUrl: ''
 embeddedImages:
