--- a/demo/src/pages/index.mdx
+++ b/demo/src/pages/index.mdx
@@ -164,6 +164,59 @@ Here we use it to return all the `projects` by using the filter prop
   )}
 </SourceList>
 
+## Latest Posts
+
+You can use the `<SourceList filter="posts" />` component from any `.mdx`. 
+
+Here we use it to return the last 3 `posts` 
+
+
+<SourceList filter="posts">
+  {posts => (
+    <Flex
+      sx={{
+        flexWrap: "wrap",
+        ml: theme => `-${theme.space[2]}px`,
+        mr: theme => `-${theme.space[2]}px`,
+      }}
+    >
+      {posts.filter((edge) => !edge.node.frontmatter.isPrivate)
+        .sort(
+          (a, b) =>
+            new Date(b.node.frontmatter.date) -
+            new Date(a.node.frontmatter.date)
+        )
+        .splice(0, 3)
+      .map((edge, index) => {
+        const {
+          frontmatter: { title, date, url, misc },
+          fields: { slug },
+        } = edge.node
+        return (
+          <Box
+            key={index}
+            sx={{ mb: 3, maxWidth: ["100%", "50%", "33.333%"], width: ["100%", "50%", "33.333%"] }}
+          >
+            <Link href={slug} sx={{textDecoration: 'none'}}>
+              <Card
+                sx={{
+                  ml: 2, 
+                  mr: 2,
+                  p: 3,
+                }}
+              > 
+                <Text sx={{fontSize:0, color:'muted'}}>{format(new Date(date), 'd-MMM-u')}</Text>
+                <Heading variant="styles.h4" sx={{color: 'text'}}>{title}</Heading>
+                <Text sx={{textDecoration: 'underline'}}>View project</Text>
+              </Card>
+            </Link>
+          </Box>
+        )
+      })}
+    </Flex>
+  )}
+</SourceList>
+
 <Divider />
 
 <Flex sx={{ flexWrap: "wrap" }}>  
