--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -14,56 +14,90 @@ Here we use it to return all the `posts` by using the filter prop
   {posts => (
     <Flex
       sx={{
-        flexWrap: "wrap",
+        flexWrap: 'wrap',
         ml: theme => `-${theme.space[2]}px`,
         mr: theme => `-${theme.space[2]}px`,
       }}
     >
       {posts
-      .filter(edge => !edge.node.frontmatter.isPrivate)
-      .sort((a, b) => b.node.frontmatter.pinned - a.node.frontmatter.pinned)
-      .map((edge, index) => {
-        const {
-          frontmatter: { title, featuredImage, tags, date, pinned },
-          excerpt,
-          fields: { slug },
-        } = edge.node
-        return (
-          <Box
-            key={index}
-            sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', mb: 3, maxWidth: ["100%", "100%", "50%", "50%"], width: ["100%", "100%", "50%", "50%"] }}
-          >
-             <Link href={slug} sx={{ textDecoration: "none", display: 'flex', flex: '1 1 auto', flexDirection: 'column', m: theme => `0px ${theme.space[2]}px`, minHeight: '1px' }}>
-    
-               <Card sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', minHeight: '1px' }}>
-                {featuredImage && featuredImage.childImageSharp && (
-                  <Box sx={{ minHeight: '1px'}}>
-                    <Img
-                      fluid={featuredImage.childImageSharp.fluid}
-                      alt={featuredImage.childImageSharp.fluid.originalName}
-                    />
+        .filter(edge => !edge.node.frontmatter.isPrivate)
+        .reduce((routes, route) => {
+          return route.node.frontmatter.pinned
+            ? [route, ...routes]
+            : [...routes, route]
+        }, [])
+        .map((edge, index) => {
+          const {
+            frontmatter: { title, featuredImage, tags, date, pinned },
+            excerpt,
+            fields: { slug },
+          } = edge.node
+          return (
+            <Box
+              key={index}
+              sx={{
+                display: 'flex',
+                flex: '1 1 auto',
+                flexDirection: 'column',
+                mb: 3,
+                maxWidth: ['100%', '100%', '50%', '50%'],
+                width: ['100%', '100%', '50%', '50%'],
+              }}
+            >
+              <Link
+                href={slug}
+                sx={{
+                  textDecoration: 'none',
+                  display: 'flex',
+                  flex: '1 1 auto',
+                  flexDirection: 'column',
+                  m: theme => `0px ${theme.space[2]}px`,
+                  minHeight: '1px',
+                }}
+              >
+                <Card
+                  sx={{
+                    display: 'flex',
+                    flex: '1 1 auto',
+                    flexDirection: 'column',
+                    minHeight: '1px',
+                  }}
+                >
+                  {featuredImage && featuredImage.childImageSharp && (
+                    <Box sx={{ minHeight: '1px' }}>
+                      <Img
+                        fluid={featuredImage.childImageSharp.fluid}
+                        alt={featuredImage.childImageSharp.fluid.originalName}
+                      />
+                    </Box>
+                  )}
+                  <Box
+                    sx={{
+                      display: 'flex',
+                      flex: '1 1 auto',
+                      flexDirection: 'column',
+                      p: 3,
+                    }}
+                  >
+                    <Heading
+                      variant="styles.h4"
+                      sx={{ color: pinned ? 'primary' : 'text' }}
+                    >
+                      {title}
+                    </Heading>
+                    <Text sx={{ mb: 1, color: 'muted' }}>
+                      {format(new Date(date), 'd-MMM-u')}
+                    </Text>
+                    <Text sx={{ mb: 1, color: 'text' }}>{excerpt}</Text>
                   </Box>
-                )}
-                  <Box sx={{ 
-                    display: 'flex', 
-                    flex: '1 1 auto', 
-                    flexDirection: 'column', 
-                    p: 3}}>
-                  <Heading variant="styles.h4" sx={{ color: pinned ? "primary": "text" }}>
-                    {title}
-                  </Heading>
-                   <Text sx={{mb: 1, color: 'muted'}}>{format(new Date(date), 'd-MMM-u')}</Text>
-                   <Text sx={{mb: 1, color: 'text'}}>{excerpt}</Text>
+                  <Box sx={{ p: 3 }}>
+                    <Text>View Post</Text>
                   </Box>
-                  <Box sx={{p: 3}}>
-                  <Text>View Post</Text>
-                  </Box>
-              </Card>
-   
-            </Link> 
-          </Box>
-        )
-      })}
+                </Card>
+              </Link>
+            </Box>
+          )
+        })}
     </Flex>
   )}
 </SourceList>
